<resources>
    <string name="app_name">MSC Dictionary</string>
    <string name="type_word_lable">Type Word</string>
    <string name="tille_lable">MSC-DICTIONARY</string>
    <string name="no_history_lable">You have not searched yet</string>
    <string name="no_data_lable">No Data</string>
    <string name="history_lable">History</string>
    <string name="favourite_lable">Favourite</string>
    <string name="practice_lable">Practice</string>
    <string name="logout_lable">Logout</string>
    <string name="share_lable">Share</string>
    <string name="rate_lable">Rate app</string>
    <string name="login_lable">Login</string>
    <string name="tap_to_login_lable">Tap to login</string>
    <string name="run_service">Msc service running in device</string>
    <string name="title_qick_translate">MSC Quickly Translate</string>
    <string name="error_quick_translate">No result was found</string>
    <string name="tap_to_close">Tag to close</string>
    <string name="title_dialog_ask_download">Download data ?</string>
    <string name="message_dialog_ask_download">For a better experience we prepare the necessary data for your application. To use please download.</string>
    <string name="download_lable">Download</string>
    <string name="cancel_lable">Cancel</string>
    <string name="dont_ask_again_lable">Don\'t ask again</string>
    <string name="title_download_notifi">Downloading</string>
    <string name="complete_download">download completed</string>
    <string name="error_download">Download error</string>
    <string name="unzipping">Extracting</string>
    <string name="title_dialog_ask_login">Login now ?</string>
    <string name="message_dialog_ask_login">To use this feature you have to login, please login now</string>
    <string name="login_now_lable">Login</string>
    <string name="later_lable">Later</string>
    <string name="create_account">Register</string>
    <string name="username_input_emty">User name can not empty</string>
    <string name="pass_input_emty">Password can not empty</string>
    <string name="register_lable">Register</string>
    <string name="tap_to_select_lable">Tap to select</string>
    <string name="favourite_lable_upper">FAVOURITE</string>
    <string name="history_lable_upper">HISTORY</string>
    <string name="title_dialog_error_download">Download error</string>
    <string name="message_dialog_error_download">A error while download, let check your conection and try again.</string>
    <string name="extrac_zip_lable">Extracing data</string>
    <string name="copyright">This app is owned by the company MSC Solution \n any copying is illegal</string>
    <string name="error_no_found">not variable offline, please connection network</string>
    <string name="error_no">not found</string>
    <string name="see_more_mean">See more</string>
    <string name="turn_float">Real time translate</string>
    <string name="tutorial">To translate , let copy a word and click float button</string>
    <string name="understand">I understanded</string>
    <string name="tap_again_to_out">Double tap to back</string>
    <string name="can_not_empty">Can not empty</string>
    <string name="banner_ad_unit_id">ca-app-pub-9843359112474482/6161564308</string>
    <string name="ADMOB_APP_ID">ca-app-pub-9843359112474482~8049361045</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="share_contetn">Great app for learn english</string>
    <string name="title_dialog_rate">Rate this app</string>
    <string name="message_dialog_rate">You really seem to like this app, since you have already used it many times! It would be great if you took a moment to rate it.</string>
    <string name="rate_ok">Rate now</string>
    <string name="rate_later">Later</string>
    <string name="search">Search</string>
    <string name="title_dialog_practice">Will release in next update</string>
    <string name="message_dialog_practice">This a interest game, it can help you practice word, which you searched</string>
    <string name="dictionary">Dictionary</string>
    <string name="translate">Translate</string>
    <string name="en_vi">English - Vietnamese</string>
    <string name="change_label">Change</string>
    <string name="vi_en">Vietnamese - English</string>
    <string name="title_dialog_ask_translate">Open translate feature</string>
    <string name="message_dialog_ask_translate">We can find this word in dictionary, do you want open translate tab to continue translate it ?</string>
    <string name="yes_lable">Yes</string>
    <string name="request_connect">To play audio you have to connet internet</string>
    <string name="tap_to_open_app">Open app</string>
    <string name="size_text">Size Text</string>
    <string name="start_lable">Start</string>
    <string name="tutorial_practice">We will get word in your favourite, Question will a audio, and its pronounce. You have to choice correct word</string>
    <string name="amount_word">Amount word you want to practice now</string>
    <string name="from_lable">From</string>
    <string name="to_lable">To</string>
    <string name="loading">Loading</string>
    <string name="result">Result</string>
    <string name="list_word_uncorrect">List uncorrect word</string>
    <string name="re_practice">Repractice uncorrect word</string>
    <string name="practice_all">Repractice all word</string>
    <string name="out_lable">Close practice</string>
    <string name="turn_auto">Auto favourite when search</string>
    <string name="tutorial_auto_add_when_search">When you search any word, this word is favourited, and you can practice anytime</string>
    <string name="editmean">Edit your mean</string>
    <string name="edit_tutorial">Edit word\'s mean, which will be showed in practice and real translate</string>
    <string name="edit_lable">Edit</string>
    <string name="wanted_practice">Practice word has saved in your favourite, so you have to has latest four word to practice</string>
    <string name="no_connect">No Connection</string>
    <string name="no_audio">No Audio</string>
    <string name="title_dialog_ask_out_game">Out off game</string>
    <string name="message_dialog_ask_out_game">Do you want out game now, the reuslt can not saved</string>
    <string name="continue_lable">Continue</string>
    <string name="error_more_than_size">"Max is "</string>
    <string name="error_min_size">Min is 1</string>
</resources>
