<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_header"
            android:background="@color/colorPrimary"
            android:text="@string/result"
            android:gravity="center"
            android:textSize="@dimen/size_text_title"
            android:fontFamily="@font/opensans_bold"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_header"
            android:text="@string/list_word_uncorrect"
            android:layout_marginLeft="40dp"
            android:textSize="15sp"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center_vertical"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reWord"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_height="300dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:background="@drawable/bg_cornor_primary"
            >
            <TextView
                android:id="@+id/rePracUn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_header"
                android:text="@string/re_practice"
                android:textSize="@dimen/size_text_title"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="?attr/selectableItemBackgroundBorderless"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_header"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:background="@drawable/bg_cornor_primary"
            android:layout_marginTop="@dimen/margin_small"
            >
            <TextView
                android:id="@+id/reAll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/practice_all"
                android:textSize="@dimen/size_text_title"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="?attr/selectableItemBackgroundBorderless"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_header"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:background="@drawable/bg_cornor_red"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            >
            <TextView
                android:id="@+id/close"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/out_lable"
                android:textSize="@dimen/size_text_title"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="?attr/selectableItemBackgroundBorderless"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>