<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:orientation="vertical"
            app:elevation="0dp"
            android:layout_height="wrap_content"
            android:background="@color/background_content"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                >
                <RelativeLayout
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_header"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <ImageButton
                        android:id="@+id/btnMenuDrawer"
                        android:layout_width="@dimen/height_header"
                        android:layout_height="@dimen/height_header"
                        android:src="@drawable/menu_drawer"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/btnMenuDrawer"
                        android:orientation="horizontal"
                        android:layout_alignParentRight="true">


                        <TextView
                            android:id="@+id/btnDictionary"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/dictionary"
                            android:textColor="@color/white"
                            android:fontFamily="@font/poppins_bold"
                            android:textSize="@dimen/size_text_title"
                            android:layout_weight="1"
                            android:gravity="center"
                            />

                        <TextView
                            android:id="@+id/btnTranslate"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/translate"
                            android:textColor="@color/un_pri"
                            android:fontFamily="@font/poppins_bold"
                            android:textSize="@dimen/size_text_title"
                            android:layout_weight="1"
                            android:gravity="center"
                            />
                    </LinearLayout>

                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:background="@color/colorPrimary"/>
                <EditText
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/edTextEn"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:layout_height="@dimen/height_header"
                    android:background="@drawable/border_search"
                    android:hint="@string/type_word_lable"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingLeft="@dimen/margin_medium"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    />

                <TextView
                    android:id="@+id/btnSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="@id/edTextEn"
                    app:layout_constraintTop_toTopOf="@id/edTextEn"
                    app:layout_constraintBottom_toBottomOf="@id/edTextEn"
                    android:text="@string/search"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginRight="@dimen/margin_small"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toTopOf="@id/btnSearch"
                    app:layout_constraintRight_toRightOf="@id/btnSearch"
                    app:layout_constraintBottom_toBottomOf="@id/btnSearch"
                    app:layout_constraintLeft_toLeftOf="@id/btnSearch"
                    android:visibility="invisible"
                    />

                <RelativeLayout
                    android:id="@+id/llHeader"
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_header"
                    app:layout_constraintTop_toBottomOf="@id/edTextEn"
                    >
                    <TextView
                        android:id="@+id/tvMean"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/height_header"
                        android:text="mine"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="#454444"
                        android:textSize="@dimen/big_size_text"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:gravity="center_vertical"
                        />

                    <TextView
                        android:id="@+id/tvVoice"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/height_header"
                        android:layout_toRightOf="@id/tvMean"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:text="/hei/"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="12sp"
                        />

                    <RelativeLayout
                        android:id="@+id/llAudio"
                        android:layout_width="@dimen/height_header"
                        android:layout_height="@dimen/height_header"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/margin_small"
                        >
                        <ImageButton
                            android:id="@+id/tvAudio"
                            android:layout_width="@dimen/height_header"
                            android:layout_height="@dimen/height_header"
                            android:src="@drawable/ic_speaker"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            />

                        <ProgressBar
                            android:id="@+id/progressVoice"
                            android:layout_centerInParent="true"
                            android:layout_width="@dimen/size_progress"
                            android:layout_height="@dimen/size_progress"
                            android:visibility="invisible"
                            />
                    </RelativeLayout>


                    <ImageButton
                        android:id="@+id/btnFavourite"
                        android:layout_width="@dimen/height_header"
                        android:layout_height="@dimen/height_header"
                        android:layout_toLeftOf="@id/llAudio"
                        android:src="@drawable/ic_favourite"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        />
                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:background="@color/colorPrimary"
                android:text="@string/tap_to_select_lable"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                android:textSize="15dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tvHistory"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_header"
                android:text="@string/history_lable"
                android:layout_below="@id/tvLogin"
                android:drawableLeft="@drawable/ic_history"
                style="@style/item_menu_drawer"
                android:background="?attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/tvFavourite"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_header"
                android:layout_below="@id/tvHistory"
                android:text="@string/favourite_lable"
                android:drawableLeft="@drawable/ic_favourite"
                style="@style/item_menu_drawer"
                android:background="?attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/tvPractice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_header"
                android:layout_below="@id/tvFavourite"
                android:text="@string/practice_lable"
                android:drawableLeft="@drawable/ic_practice"
                style="@style/item_menu_drawer"
                android:background="?attr/selectableItemBackground"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tvPractice"
                android:background="@color/color_text_menu_item"
                android:id="@+id/diliver"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                />

            <RelativeLayout
                android:id="@+id/llTurnFloat"
                android:layout_below="@id/diliver"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_header">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/item_menu_drawer"
                    android:text="@string/turn_float"
                    android:layout_centerVertical="true"
                    />

                <Switch
                    android:id="@+id/swFloat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_small"
                    android:clickable="false"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvRate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_header"
                android:layout_below="@id/llTurnFloat"
                android:text="@string/rate_lable"
                android:drawableLeft="@drawable/ic_rate"
                style="@style/item_menu_drawer"
                android:background="?attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/tvShare"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_header"
                android:layout_below="@id/tvRate"
                android:text="@string/share_lable"
                android:drawableLeft="@drawable/ic_share"
                style="@style/item_menu_drawer"
                android:background="?attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_header"
                android:text="@string/logout_lable"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15sp"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:textColor="@color/red"
                android:visibility="invisible"
                />
        </RelativeLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>