<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_height="@dimen/height_header">

        <TextView
            android:id="@+id/edTextEn"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_height="@dimen/height_header"
            android:background="@drawable/border_search"
            android:hint="@string/type_word_lable"
            android:fontFamily="@font/poppins_medium"
            android:paddingLeft="@dimen/margin_medium"
            android:textSize="15sp"
            android:lines="1"
            android:imeOptions="actionDone"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more_mean"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginRight="30dp"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_height="@dimen/height_header"
            android:background="@drawable/border_search"
            android:fontFamily="@font/poppins_medium"
            android:paddingLeft="@dimen/margin_medium"
            android:textSize="15sp"
            android:lines="1"
            android:imeOptions="actionDone"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="@dimen/size_progress"
            android:layout_height="@dimen/size_progress"
            android:layout_centerVertical="true"
            android:layout_marginLeft="45dp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvClose"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/tap_to_close"
        android:gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"

        />
</LinearLayout>